Correct overflow in site-name in default.html and style.scss

--- a/style.scss
+++ b/style.scss
@@ -362,7 +362,7 @@ html {
       color: white;
       font-stretch: ultra-expanded;
       font-weight: 900;
-      text-shadow: 0px 0px 2px white;
+      text-shadow: 0px 0px 4px white;
 
     }
      display: flex;
@@ -779,7 +779,9 @@ html {
       justify-content: center;
       align-content: center;
       .navb {
-        justify-content: space-around;
+        align-content: space-around;
+        justify-content: space-evenly;
+        text-align: right;
            a {
              font-size: 1.4rem;
           padding: 3px 4px 3px 4px;
